--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     </div>
 
     <script>
-        function updateCountdown() {
+
+
+
+function updateCountdown() {
             const currentDate = new Date();
             const currentDay = currentDate.getDay();
             const currentHour = currentDate.getHours();
@@ -24,27 +27,27 @@
             // Define o dia da semana para terça-feira (terça-feira é 2 no JavaScript, onde domingo é 0)
             const tuesday = 2;
 
-            // Define a hora de reinício para 12:40:00
-            const restartHour = 12;
-            const restartMinute = 40;
+            // Define a hora de reinício para 20:00:00
+            const restartHour = 20;
+            const restartMinute = 0;
             const restartSecond = 0;
 
             if (currentDay === tuesday && currentHour === restartHour && currentMinute === restartMinute && currentSecond === restartSecond) {
-                // Se for terça-feira às 12:40:00, reinicie o cronômetro
+                // Se for terça-feira às 20:00:00, reinicie o cronômetro
                 clearInterval(interval);
                 startCountdown();
                 return;
             }
 
-            // Calcula o tempo restante até a próxima sexta-feira às 12:40:00
+            // Calcula o tempo restante até a próxima terça-feira às 20:00:00
             let timeRemaining = 0;
-            if (currentDay < 5 || (currentDay === 5 && (currentHour < restartHour || (currentHour === restartHour && currentMinute < restartMinute)))) {
-                // Se for antes de sexta-feira às 12:40:00, calcula o tempo restante no mesmo dia
+            if (currentDay < tuesday || (currentDay === tuesday && (currentHour < restartHour || (currentHour === restartHour && currentMinute < restartMinute)))) {
+                // Se for antes de terça-feira às 20:00:00, calcula o tempo restante no mesmo dia
                 timeRemaining = (restartHour - currentHour) * 3600 +
                     (restartMinute - currentMinute) * 60 +
                     (restartSecond - currentSecond);
             } else {
-                // Se for depois de sexta-feira às 12:40:00, calcula o tempo restante até a próxima terça-feira
+                // Se for depois de terça-feira às 20:00:00, calcula o tempo restante até a próxima terça-feira
                 const daysUntilTuesday = (tuesday + 7 - currentDay) % 7;
                 timeRemaining = (daysUntilTuesday * 24 + restartHour - currentHour) * 3600 +
                     (restartMinute - currentMinute) * 60 +
@@ -57,7 +60,7 @@
             const seconds = Math.floor(timeRemaining % 60);
 
             // Exibe o tempo restante no elemento com id "countdown"
-            document.getElementById("countdown").textContent = ` Tempo restante: ${hours}h ${minutes}m ${seconds}s`;
+            document.getElementById("countdown").textContent = `Tempo restante: ${hours}h ${minutes}m ${seconds}s`;
         }
 
         function startCountdown() {
@@ -67,7 +70,9 @@
 
         // Inicializa o cronômetro
         startCountdown();
+
     </script>
+    <script src="./main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
