--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cronômetro Decrescente</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <div class="container mt-4">
-        <br/>
-        Cronômetro de teste
-        <h1 style="background-color: red; padding: 2rem; color:#FFFFFF;" class="text-center " id="countdown"></h1>
+      <br />
+      Cronômetro de teste
+      <h1
+        style="background-color: red; padding: 2rem; color: #ffffff"
+        class="text-center"
+        id="countdown"
+      ></h1>
     </div>
 
     <script>
-
-
-
-function updateCountdown() {
+       function updateCountdown() {
             const currentDate = new Date();
             const currentDay = currentDate.getDay();
             const currentHour = currentDate.getHours();
@@ -54,13 +60,14 @@ function updateCountdown() {
                     (restartSecond - currentSecond);
             }
 
-            // Converte o tempo restante em horas, minutos e segundos
-            const hours = Math.floor(timeRemaining / 3600);
+            // Converte o tempo restante em dias, horas, minutos e segundos
+            const days = Math.floor(timeRemaining / (3600 * 24));
+            const hours = Math.floor((timeRemaining % (3600 * 24)) / 3600);
             const minutes = Math.floor((timeRemaining % 3600) / 60);
             const seconds = Math.floor(timeRemaining % 60);
 
             // Exibe o tempo restante no elemento com id "countdown"
-            document.getElementById("countdown").textContent = `Tempo restante: ${hours}h ${minutes}m ${seconds}s`;
+            document.getElementById("countdown").textContent = `Tempo restante: ${days} DIAS ${hours} HORAS ${minutes} MINUTOS ${seconds} SEGUNDOS`;
         }
 
         function startCountdown() {
@@ -70,9 +77,12 @@ function updateCountdown() {
 
         // Inicializa o cronômetro
         startCountdown();
-
     </script>
     <script src="./main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
