--- a/grid.html
+++ b/grid.html
@@ -37,42 +37,48 @@
           userId: "01",
           nome: "Eduardo Silva",
           cursoRealizado: "Perícia e Avaliação de Imóveis",
-          videoUrl: "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
+          videoUrl:
+            "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
         },
 
         {
           userId: "02",
           nome: "Silvia",
           cursoRealizado: "Perícia e Avaliação de Imóveis",
-          videoUrl:"https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
+          videoUrl:
+            "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
         },
 
         {
           userId: "03",
           nome: "Cintia Cruz",
           cursoRealizado: "Assistente Técnico Judicial",
-          videoUrl: "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
+          videoUrl:
+            "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
         },
 
         {
           userId: "04",
           nome: "Felipe Souza",
           cursoRealizado: "Assistente Técnico Judicial",
-          videoUrl: "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
+          videoUrl:
+            "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
         },
 
         {
           userId: "05",
           nome: "Carlos Alves",
           cursoRealizado: "Assistente Técnico Judicial",
-          videoUrl: "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
+          videoUrl:
+            "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
         },
 
         {
           userId: "06",
           nome: "Patrícia Silva",
           cursoRealizado: "Perícia Ambiental",
-          videoUrl: "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
+          videoUrl:
+            "https://player.vimeo.com/video/821425616?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479",
         },
         // Adicione mais dados conforme necessário
       ];
@@ -98,7 +104,6 @@
       });
     </script>
 
-    
     <script src="./main.js"></script>
   </body>
 </html>
