--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     >
       <span class="text-center" id="countdown"></span>
     </div>
+    <div class="container">
+      <script src="https://gist.github.com/ocariocawebdesign/0c6c5b254473a31f53e3fe544df02901.js"></script>
+    </div>
 
     <script>
       function updateCountdown() {
